# omen

./: .gitignore  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.codex/skills/: code-simplifier.md
.cursor/rules/: coding-guidelines copy.mdc  coding-guidelines.mdc  design-guidelines.mdc  nextjs-react.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  AGENTS.md  Caddyfile  Dockerfile  POLY_API.md  README.md  docker-compose.dev.yml  docker-compose.yml  openapi.json  pyproject.toml  ruff.toml
backend/docs/: BOOKS_API.md  GRAPHS.md  POLY_GENERAL.md  PRICES_API.md  README.md  SEARCH_API.md
backend/other/: neg_arb.py
backend/scripts/: README.md  generate_types.py
backend/src/: server.py  settings.py  tests.py  update_markets.py
backend/src/analytics/: insider_finder.py  top_holders_analysis.py  trades_analytics.py  user_pnl_fetch.py  user_pnl_markers.py
backend/src/api/: api.py
backend/src/db/: database_client.py  db_core.py  db_init.py  db_populate.py  db_populate_markets.py  db_populate_positions.py  db_populate_price_history.py  db_populate_trades.py  db_utils.py  inserts.py  models.py  selects.py
backend/src/models/: activity.py  base.py  event.py  event_market.py  market.py  polymarket.py  position.py  price_history.py  public.py  responses.py  search.py  top_holders.py  trade.py  user_position.py  user_profile.py  wallet.py
backend/src/models/graph/: position.py  wallet.py
backend/src/models/onchain/: ancillary_data.py
backend/src/negrisk/: README.md  arbitrage_playbook.md  conversion_flow.md  find_arbs.py
backend/src/polymarket/: api_config.py  poly_client.py  poly_client_graphs.py  poly_client_onchain.py  poly_client_prices.py
backend/src/polymarket/models/: market.py
backend/src/utils/: discord_utils.py  logging_config.py  notifications.py  parse_utils.py  redis_client.py  telegram_utils.py  usdc.py
backend/src/workers/: price_history_updater.py
backend/tests/: test_poly_client_gamma.py  test_poly_client_graphs.py  test_poly_client_prices.py  test_poly_client_search.py
frontend/: AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend-waitlist/: .gitignore  AGENTS.md  package-lock.json  package.json  pnpm-lock.yaml
frontend-waitlist/app/: globals.css  layout.tsx  metadata.const.ts  opengraph-image.tsx  page.tsx  texts.const.ts
scripts/: kelly.py
subgraphs/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  templatify.ts
trading/: package.json  pnpm-lock.yaml
(+295 files in other folders)
