[tool.poetry]
name = "polyapp-backend"
version = "0.1.0"
description = ""
authors = ["Jure D"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.2"
numpy = "^2.3.3"
matplotlib = "^3.10.7"
python-dotenv = "^1.1.1"
aiogram = "^3.22.0"
fastapi = {extras = ["standard"], version = "^0.119.1"}
py-clob-client = "^0.25.0"
uvicorn = "^0.38.0"
gunicorn = "^23.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
psycopg2-binary = "^2.9.11"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
pydantic = "2.11"
pydantic-settings = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)"
]
