[project]
name = "polyapp-backend"
version = "0.1.0"
description = "FastAPI backend for the Omen Polymarket analytics app"
authors = [{ name = "Omen contributors" }]
requires-python = ">=3.11,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.136.1", extras = ["standard"]}
py-clob-client = "^0.25.0"
uvicorn = "^0.38.0"
gunicorn = "^23.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
psycopg2-binary = "^2.9.11"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
pydantic = "2.11"
pydantic-settings = "^2.11.0"
web3 = "^7.16.0"
redis = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)",
    "datamodel-code-generator (>=0.35.0,<0.36.0)",
    "pip-audit (>=2.10.0,<3.0.0)"
]
