[project]
name = "polyapp-backend"
version = "0.1.0"
description = "FastAPI backend for the Omen Polymarket analytics app"
authors = [{ name = "Omen contributors" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]>=0.136.1,<0.137.0",
    "py-clob-client-v2>=1.0.1,<2.0.0",
    "uvicorn>=0.47.0,<0.48.0",
    "gunicorn>=26.0.0,<27.0.0",
    "sqlalchemy[asyncio]>=2.0.44,<3.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "httpx>=0.28.1,<0.29.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "web3>=7.14.0,<8.0.0",
    "redis>=7.0.1,<8.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15.13,<0.16.0",
    "datamodel-code-generator>=0.35.0,<0.36.0",
    "pip-audit>=2.10.0,<3.0.0",
]
